--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>sample Home Page</h1>
+<p>
+	This is the home page. <br>
+	find me in /app/view/pages/home.html.erb <br> <br>
+	varible is : <%= @title%>
+
+</p>
