--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,7 @@
 <p>
 	This is the home page. <br>
 	find me in /app/view/pages/home.html.erb <br> <br>
-	varible is : <%= @title%>
+	
+	<%= link_to 'Sign up now!', '#', :class => 'signup_button round_button' %>
 
 </p>
