--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -99,3 +99,16 @@ nav ul li a:visited {
 nav ui li a:hover {
 	text-decoration: underline;
 }
+
+/* footer */
+footer {
+	text-align: center;
+	margin-top: 10px;
+	width: 710px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+footer.nav {
+	float: center;
+}
