--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> <%= title %></title>
+    <title><%= title %></title>
     <%= javascript_include_tag :defaults %>
     <%= csrf_meta_tag %>
     <%= render 'layouts/stylesheets' %>
@@ -13,7 +13,7 @@
         <%= yield %>      	
       </section>
       
-      <%= render 'layouts/footer' %>
+      <%= render 'layouts/footer' %><br>
       <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
