--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,18 @@
-<%= @user.name %>, <%= @user.email %>
+<table c;ass="profile" summary="Profile information">
+  <tr>
+    <td>
+      <h1>
+        <!-- 
+	      gravatar_for is a helper function to reduce code repitition
+	      defined in app/helpers/users_helper.rb
+        -->
+        <%= gravatar_for @user %>
+        <%= @user.name %>
+      </h1>
+  	</td>
+  	<td class="sidebar round">
+      <strong>Name</strong> <%= @user.name %><br />
+      <strong>URL</strong> <%= link_to user_url(@user), @user %>
+  	</td>
+  </tr>
+</table>
