--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -109,6 +109,30 @@ footer {
 	margin-right: auto;
 }
 
-footer.nav {
+footer nav ul {
+	width: 710px;
 	float: center;
+}
+
+/* User show page */
+table.profile {
+    width: 100%;
+    margin-bottom: 0;
+}
+
+td.main {
+    width: 70%;
+    padding: 1em;
+}
+
+td.sidebar {
+	width: 30%;
+	padding: 1em;
+	vertical-align: top;
+	background: #ffc;
+}
+
+.profile img.gravatar {
+    border: 1px solid #999;
+    margin-bottom: -15px;
 }
