ch8.2 sign up failure

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
-<h1>sample Home Page</h1>
+<h1>Sample Home Page</h1>
 <p>
 	This is the home page. <br>
 	find me in /app/view/pages/home.html.erb <br> <br>
 	
-	<%= link_to 'Sign up now!', '#', :class => 'signup_button round_button' %>
+	<%= link_to 'Sign up now!', new_user_path, :class => 'signup_button round_button' %>
 
 </p>
