--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,9 @@
     <%= image_tag('rails.png', :alt => "Image Placeholder", :class => 'round') %>
     <nav class='round'>
       <ul>
-      	<li><%= link_to 'Home', '#' %></li>
+      	<li><%= link_to 'Home', :home %></li>
       	<li><%= link_to 'Help', '#' %></li>
-      	<li><%= link_to 'Sign in', '#' %></li>
+      	<li><%= link_to 'Sign in', new_user_path %></li>
       </ul>
     </nav>
   </header>
