--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,8 @@
       <ul>
       	<li><%= link_to 'Home', :home %></li>
       	<li><%= link_to 'Help', '#' %></li>
-      	<li><%= link_to 'Sign in', new_user_path %></li>
+        <li><%= link_to 'Sign in', signin_path %></li>
+      	<li><%= link_to 'Sign up', signup_path %></li>
       </ul>
     </nav>
   </header>
