--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,14 @@
       <ul>
       	<li><%= link_to 'Home', :home %></li>
       	<li><%= link_to 'Help', '#' %></li>
+      	<% if signed_in? %>
+        <li><%= link_to 'Profile', current_user %></li>
+        <% end %>
+      	<% if signed_in? %>
+        <li><%= link_to 'Sign out', signout_path, :method => :delete %></li>
+        <% else %>
         <li><%= link_to 'Sign in', signin_path %></li>
+      	<% end %>
       	<li><%= link_to 'Sign up', signup_path %></li>
       </ul>
     </nav>
