--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <table c;ass="profile" summary="Profile information">
   <tr>
-    <td>
+    <td class="main">
       <h1>
         <!-- 
 	      gravatar_for is a helper function to reduce code repitition
@@ -9,10 +9,19 @@
         <%= gravatar_for @user %>
         <%= @user.name %>
       </h1>
+  	  <% unless @user.microposts.empty? %>
+  	    <table class="microposts", summary="User microposts">
+  	    	<%= render @microposts %>
+  	    </table>
+  	    <%= will_paginate @microposts %>
+  	  <% end %>
+
+      
   	</td>
   	<td class="sidebar round">
       <strong>Name</strong> <%= @user.name %><br />
-      <strong>URL</strong> <%= link_to user_url(@user), @user %>
+      <strong>URL</strong> <%= link_to user_url(@user), @user %><br />
+      <string>Microposts</string> <%= @user.microposts.count %>
   	</td>
   </tr>
 </table>
